--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/quanlynhansu?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
