--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/quanlynhansu?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -14,6 +14,12 @@ server.frontend=http://localhost:3000
 shop.app.jwtRefreshExpirationMs= 172800000
 jwt.secret=lheye9bivSLKyVTB6BVTR0TMFWjppOnb82xFncTS4oY
 
+# swagger-ui custom path
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+springdoc.swagger-ui.enabled=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
