--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -154,6 +154,13 @@
 
 
 
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+<!--		dùng để xuất file excel trong dự án này -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+		</dependency>
 
 
 	</dependencies>
